<resources>
    <string name="app_name" translatable="false">Notes</string>
    <string name="vector_path_menu" translatable="false">M3,8 L21,8 21,6 3,6z M3,18 L21,18 21,16 3,16z M3,13 L21,13 21,11 3,11z</string>
    <string name="vector_path_line" translatable="false">M3,13 L21,13 21,11 3,11z M3,13 L21,13 21,11 3,11z M3,12 L21,12 21,12 3,12z</string>
    <string name="vector_path_close" translatable="false">M5,6.41 L17.59,19 19,17.59 6.41,5z M6.41,19 L19,6.41 17.59,5 5,17.59z M12,12 L12,12 12,12 12,12z</string>
    <string name="path_cross" translatable="false">M6.4,6.4 L17.6,17.6 M6.4,17.6 L17.6,6.4</string>
    <string name="path_plus" translatable="false">M6.4,12 L17.6,12 M12,6.4 L12,17.6</string>

    <string name="key_1" translatable="false">1</string>
    <string name="key_2" translatable="false">2</string>
    <string name="key_3" translatable="false">3</string>
    <string name="key_4" translatable="false">4</string>
    <string name="key_5" translatable="false">5</string>
    <string name="key_6" translatable="false">6</string>
    <string name="key_7" translatable="false">7</string>
    <string name="key_8" translatable="false">8</string>
    <string name="key_9" translatable="false">9</string>
    <string name="key_0" translatable="false">0</string>

    <string name="def" translatable="false">DEF</string>
    <string name="abc" translatable="false">ABC</string>
    <string name="jkl" translatable="false">JKL</string>
    <string name="mno" translatable="false">MNO</string>
    <string name="wxyz" translatable="false">WXYZ</string>
    <string name="tuv" translatable="false">TUV</string>
    <string name="pqrs" translatable="false">PQRS</string>

    <string name="blue" translatable="false">Blue</string>
    <string name="orange" translatable="false">Orange</string>
    <string name="turquoise" translatable="false">Turquoise</string>
    <string name="yellow" translatable="false">Yellow</string>

    <string name="englishuk" translatable="false">English (UK)</string>
    <string name="russian" translatable="false">Russian</string>

    <string name="notes" translatable="false">Notes</string>
    <string name="node_name" translatable="false">%s</string>
    <string name="node_content" translatable="false">%s</string>
    <string name="work_time" translatable="false">HH:mm</string>
    <string name="work_day" translatable="false">dd/MM/yyyy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="settings">SETTINGS</string>
    <string name="more_effectively">More effectively</string>
    <string name="vip_version">VIP VERSION</string>
    <string name="see_more">SEE MORE</string>
    <string name="create_quick_notes_on_home_screen">Create quick notes on home screen</string>
    <string name="apply">Apply</string>
    <string name="create_quick_checklist_on_home_screen">Create quick checklist on home screen</string>
    <string name="trash">Trash</string>
    <string name="display">Display</string>
    <string name="shareApp">Share</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_mode">View Mode</string>

    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <string name="plus">Plus</string>
    <string name="groupPlusCross">groupPlusCross</string>

    <string name="LoginFingerprint">Fingerprint Login</string>
    <string name="loginPass">Login Password</string>

    <string name="powered_by_squad_2">Powered by Squad 2</string>
    <string name="clock_app">Clock App</string>
    <string name="contact_us">Contact Us</string>
    <string name="term_privacy">Term Privacy</string>
    <string name="about_us">About Us</string>
    <string name="chat_with_me">Chat With Me</string>
    <string name="my_profile">My Profile</string>
    <string name="login">Login</string>
    <string name="vietnam">Vietnam</string>

    <string name="choose_your_language">Choose your language</string>
    <string name="south_korea">South Korea</string>

    <string name="set_password">Set Password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_password">Delete Password</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="search">Search...</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="space" />
    <string name="notify">Notify</string>
    <string name="setting">Setting</string>
    <string name="sorted">Sorted</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="sort_by_name_ascending">Sort By Name</string>
    <string name="sort_by_name_decrease">Sort By Time Create</string>
    <string name="sort_by_time_open">Sort By Time Open</string>
    <string name="sort_by_time_ascending">Sort By Time Do ascending</string>
    <string name="sort_by_time_decrease">Sort By Time Do decrease</string>
    <string name="work_name">Name work: %s</string>
    <string name="work_content">Content work: %s</string>

    <string name="todo">TODO</string>
    <string name="today">Today</string>
    <string name="add_work">ADD WORK</string>
    <string name="start_day">Start Day</string>
    <string name="day_do_work">Day do work</string>
    <string name="time_do_work">Time do work</string>
    <string name="input_name_work">Input Name Work</string>
    <string name="description_work">Description Work</string>
    <string name="add_your_work">Add Your Work</string>

    <string name="dont_forget">Don\'t forget !!</string>
    <string name="title">Title</string>
    <string name="dismiss">Dismiss</string>
    <string name="detail">Detail</string>
    <string name="change_background">CHANGE BACKGROUND</string>
    <string name="note_title">Note title...</string>
    <string name="add_note">ADD NOTE</string>
    <string name="description">Description</string>
    <string name="note_content">Note content ...</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="profile_details">Profile Details</string>
    <string name="reminder">Reminder</string>
    <string name="repeat_after_10_minutes">Repeat after 10 minutes</string>
    <string name="trash_max">TRASH</string>
    <string name="font">Font</string>
    <string name="poppins">Poppins</string>

    <string name="select_day">Select day</string>
    <string name="done">DONE</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Are you sure you want to delete this file?</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="delete">Delete</string>
    <string name="select_time">Select time</string>
    <string name="exit">EXIT</string>
    <string name="data_success">Data Successfully saved</string>
    <string name="do_not_blank">Do not leave blank</string>
    <string name="data_update_success">Data Update Success</string>
    <string name="action_ok">Action OK</string>
    <string name="action_cancel">Action Cancelled</string>
    <string name="action_fail">Action Failed</string>
    <string name="login_finger_success">Login fingerprint success</string>
    <string name="register_password">Register password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Code</string>
    <string name="pin_fail">Pin failed</string>
    <string name="input_code">Unlock with your pin code or fingerprint</string>
    <string name="cant_password">Can\'t remember</string>
    <string name="input_pass_again">Please input code again</string>
    <string name="code_error">Code validation error</string>

    <array name="string_sub">
        <item>Login Password</item>
    </array>

    <array name="string_list">
        <item>Set Password</item>
        <item>Change Password</item>
        <item>Delete Password</item>
    </array>
</resources>