<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnViewModeDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtViewModeDialogTiltle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_general"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/view_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/txtGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/grid_view"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:drawableStartCompat="@drawable/ic_grid_view" />

    <TextView
        android:id="@+id/txtListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_12sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/list_view"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:drawableStartCompat="@drawable/ic_list_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/white_smoke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_detail_infor"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtOKViewmode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/ok"
            android:textColor="@color/red"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:background="@color/white_smoke" />

        <TextView
            android:id="@+id/txtCancelViewmode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</LinearLayout>