<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/drawer"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@drawable/img_background">

        <ImageView
            android:id="@+id/ivProfileUser"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_circle_img_profile"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileUser"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/ghost_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMyProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/my_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/personal"
                app:drawableTint="@color/black" />

            <TextView
                android:id="@+id/txtChatWithMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/chat_with_me"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/callme"
                app:drawableTint="@color/black" />

            <TextView
                android:id="@+id/txtAboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/about_us"
                app:drawableTint="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/term_privacy"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/term"
                app:drawableTint="@color/black" />

            <TextView
                android:id="@+id/text_ContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/contact_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/contact_us"
                app:drawableTint="@color/black" />

            <TextView
                android:id="@+id/txtClockApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/clock_app"
                android:textColor="@color/red"
                android:textSize="@dimen/_15ssp"
                app:drawableEndCompat="@drawable/ic_back_right"
                app:drawableStartCompat="@drawable/ic_lock"
                app:drawableTint="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:padding="20dp"
                android:text="@string/powered_by_squad_2"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:drawableStartCompat="@drawable/copyr"
                app:drawableTint="@color/black" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>