<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtChooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_detail"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/choose_your_language"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/white_smoke"/>
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseLanguage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/txtVietNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/vietnam"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_language_vietnam" />

            <TextView
                android:id="@+id/txtEnglishUK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/englishuk"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_language_english_uk" />

            <TextView
                android:id="@+id/txtSouthKorea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/south_korea"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_language_south_korea" />

            <TextView
                android:id="@+id/txtRussian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/russian"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/ic_language_russian" />
        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_detail_infor"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

        <TextView
            android:id="@+id/txtOKLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/ok"
            android:textColor="@color/red"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="@dimen/_2sdp"
            android:layout_height="match_parent"
            android:background="@color/white_smoke"/>

        <TextView
            android:id="@+id/txtCancelLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>