<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custon_circle_editext"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    android:clipToOutline="true"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_trash"
            android:padding="@dimen/_5sdp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTrash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/delete_notes"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvQuestionTrash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/are_you_sure_you_want_to_delete_this_file"
        android:textColor="@color/black_grey"
        android:textSize="@dimen/_14ssp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white_smoke"
            android:text="@string/cancel"
            android:textColor="@color/red_primary"
            android:textSize="@dimen/_14ssp"
            app:iconGravity="textStart"
            app:iconTint="@color/red_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_red"
            android:text="@string/delete"
            android:textSize="@dimen/_14ssp"
            app:iconGravity="textStart" />
    </LinearLayout>
</LinearLayout>