<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/add_note"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_arrow_back"
                    app:drawableTint="@color/white" />

                <ImageView
                    android:id="@+id/imgSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:src="@drawable/ic_save"
                    android:contentDescription="@string/todo" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvToday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/today"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_14ssp"
                            app:drawableStartCompat="@drawable/ic_calendar"
                            app:drawableTint="?colorAccent"
                            android:drawablePadding="@dimen/_10sdp"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        android:hint="@string/note_title"
                        android:paddingStart="@dimen/_20sdp"
                        android:maxLength="30"
                        android:background="@drawable/custon_circle_editext"
                        android:textColorHint="@color/colorText"
                        android:ellipsize="start"
                        android:inputType="text"
                        tools:ignore="RtlSymmetry"
                        android:autofillHints="no" />
                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:padding="@dimen/_15sdp"
                        android:background="@drawable/custon_circle_editext"
                        android:inputType="textMultiLine"
                        android:maxLength="1000"
                        android:minLines="10"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:gravity="top"
                        android:hint="@string/note_content"
                        android:textColorHint="@color/colorText"
                        android:ellipsize="start"
                        android:importantForAutofill="no" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/bottom_sheet_add_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>